# inferunity

./: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  GITHUB_GUIDE.md  README.md  README_AUTO_SETUP.md  README_QUICK_START.md  STATUS.md  TODO.md  setup_log.txt
docs/: API.md  API_REFERENCE.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_INTEGRATION_PLAN.md  BACKEND_INTEGRATION_SUMMARY.md  BUILD_AND_TEST_SUMMARY.md  CODE_REVIEW.md  COMPLETION_SUMMARY.md  DESIGN.md  DESIGN_PHILOSOPHY.md  FEATURE_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_PLAN.md  INFERENCE_ENGINE_BASICS.md  INFERENCE_EXECUTION_FLOW.md  INFERENCE_READY.md  MEMORY_OPTIMIZATION.md  MODEL_CONVERSION.md  NEXT_STEPS.md  ONNX_INTEGRATION.md  ONNX_MODEL_LOADING_EXPLAINED.md  ONNX_RUNTIME_CONDA_SETUP.md  ONNX_RUNTIME_INSTALL.md  ONNX_RUNTIME_INSTALL_GUIDE.md  OPERATOR_COVERAGE.md  PERFORMANCE_BENCHMARKS.md  PROJECT_STATUS.md  QUICK_START.md  QWEN_CONVERSION_FINAL.md  QWEN_CONVERSION_STATUS.md  QWEN_TEST_GUIDE.md  READINESS_ASSESSMENT.md  RESOURCE_OPTIMIZATION.md  TESTING.md  TESTING_AND_OPTIMIZATION.md  TODO_COMPLETION_SUMMARY.md  USER_GUIDE.md
examples/: basic_usage.cpp  inference_example.cpp  simple_test.cpp  test_cpu_backend.cpp  test_operator_registry.cpp  test_provider.cpp  test_qwen.cpp
include/inferunity/: backend.h  cuda_backend.h  engine.h  graph.h  logger.h  memory.h  operator.h  optimizer.h  runtime.h  tensor.h  types.h
models/test/: simple_add.onnx  simple_conv.onnx
python/: CMakeLists.txt  README.md  example.py  inferunity_bindings.cpp
scripts/: auto_setup.sh  convert_qwen_optimum.py  convert_qwen_optimum_cli.sh  convert_qwen_simple.py  convert_qwen_to_onnx.py  convert_qwen_transformers.py  convert_qwen_with_patch.py  create_test_model.py  download_onnxruntime.sh  fix_optimum_rmsnorm.py  optimum_cli_patched  patch_torch_rmsnorm.py  prepare_github.sh  quick_test.sh  setup_and_test.sh  setup_venv.sh
src/backends/: CMakeLists.txt  cpu_backend.cpp  cuda_backend.cpp  onnxruntime_backend.cpp
src/core/: engine.cpp  graph.cpp  memory.cpp  memory_lifetime.cpp  memory_pool.cpp  shape_inference.cpp  tensor.cpp  tensor_lifetime_optimizer.cpp
src/frontend/: onnx_parser.cpp  onnx_parser.h  onnx_parser_impl.cpp
src/operators/: activation.cpp  conv.cpp  fused_ops.cpp  math.cpp  normalization.cpp  operator_init.cpp  pooling.cpp  shape.cpp  simd_utils.cpp  simd_utils.h  softmax.cpp
src/optimizers/: constant_folding.cpp  operator_fusion.cpp  optimizer.cpp  performance_optimizer.cpp
src/runtime/: parallel_executor.cpp  runtime.cpp  thread_pool.cpp
tests/: CMakeLists.txt  README.md  test_activation_operators.cpp  test_conv_debug.cpp  test_error_handling.cpp  test_fused_operators.cpp  test_graph.cpp  test_integration.cpp  test_math_operators.cpp  test_memory.cpp  test_memory_optimization.cpp  test_normalization_operators.cpp  test_onnx_parser.cpp  test_operator_fusion.cpp  test_operators.cpp  test_performance.cpp  test_runtime.cpp  test_shape_operators.cpp  test_tensor.cpp
tools/: CMakeLists.txt  README.md  benchmark.cpp  benchmark_suite.cpp  convert.cpp  models.txt.example  profiler.cpp
